[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Player/VRPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/dark_texture_07.material" type="Material" id=3]
[ext_resource path="res://UI/InfoScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Convayer/ConvayerBelt.tscn" type="PackedScene" id=5]
[ext_resource path="res://Portal.tscn" type="PackedScene" id=6]
[ext_resource path="res://Train/Storage.tscn" type="PackedScene" id=7]
[ext_resource path="res://Train/TrackSection.tscn" type="PackedScene" id=8]
[ext_resource path="res://Train/Engine.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objects/Crate.tscn" type="PackedScene" id=10]

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="StartCrate" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.696945, -0.925738 )

[node name="Floor" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5192, 0, -2.04831 )
use_collision = true
collision_mask = 0
width = 13.1483
height = 0.4
depth = 6.71524
material = ExtResource( 3 )

[node name="Floor2" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.63014, -4.38206, 0 )
use_collision = true
collision_mask = 0
width = 13.6302
height = 0.4
depth = 110.829
material = ExtResource( 3 )

[node name="InfoScreen" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.9 )

[node name="Conveyor" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.01026, 0.171345, -0.923642 )
constant_linear_velocity = Vector3( 0, 0, 0 )

[node name="Portal" parent="Conveyor" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9.24294, 0.511831, 0.00164151 )
collision_mask = 0

[node name="Spawn" type="Position3D" parent="Conveyor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.48327, 1.08648, -0.0139167 )

[node name="Timer" type="Timer" parent="Conveyor"]
wait_time = 2.5

[node name="VRPlayer" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )

[node name="Train" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.19698, 0.0758893, 0 )

[node name="Engine" parent="Train" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4.5982, -2.15963, -5.12265 )

[node name="Storage" parent="Train/Engine" instance=ExtResource( 7 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.0124712, 0.0104003, -4.16916 )

[node name="Storage2" parent="Train/Engine" instance=ExtResource( 7 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.00548887, 0.0283611, -8.32875 )

[node name="TrackSection" parent="Train" instance=ExtResource( 8 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 4.5147, -2.27621, 0 )

[node name="TrackSection2" parent="Train" instance=ExtResource( 8 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 4.5147, -2.27621, 3.975 )

[node name="TrackSection3" parent="Train" instance=ExtResource( 8 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 4.5147, -2.27621, 7.98018 )

[node name="TrackSection4" parent="Train" instance=ExtResource( 8 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 4.5147, -2.27621, -11.9617 )

[node name="TrackSection5" parent="Train" instance=ExtResource( 8 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 4.5147, -2.27621, -7.98666 )

[node name="TrackSection6" parent="Train" instance=ExtResource( 8 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 4.5147, -2.27621, -3.98148 )

[node name="TrackSection7" parent="Train" instance=ExtResource( 8 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 4.5147, -2.27621, -23.8335 )

[node name="TrackSection8" parent="Train" instance=ExtResource( 8 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 4.5147, -2.27621, -19.8585 )

[node name="TrackSection9" parent="Train" instance=ExtResource( 8 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 4.5147, -2.27621, -15.8533 )

[node name="TrackSection10" parent="Train" instance=ExtResource( 8 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 4.5147, -2.27621, -35.7413 )

[node name="TrackSection11" parent="Train" instance=ExtResource( 8 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 4.5147, -2.27621, -31.7663 )

[node name="TrackSection12" parent="Train" instance=ExtResource( 8 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 4.5147, -2.27621, -27.7611 )

[connection signal="button_pressed" from="StartCrate" to="." method="_on_StartCrate_button_pressed"]
[connection signal="timeout" from="Conveyor/Timer" to="." method="_on_Timer_timeout"]
